--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,12 @@
 }
 body,
 body > div {
-  height: 100vh;
-  width: 100vw;
+  height: 80vh;
+  background-color: #2b2d42;
+
 }
 #container {
-  height: 100%;
+  height: 90vh;
   display: flex;
   flex-direction: column;
 }
@@ -15,11 +16,14 @@ body > div {
   display: flex;
 }
 #navbar {
-  padding: 2em;
+  padding-bottom: 1em;
+  padding-top: 1em;
   justify-content: space-evenly;
+  background-color: #e5e5e5;
 }
 #main-section {
   flex-grow: 1;
+
 }
 #main-section > div {
   width: 100%;
@@ -36,5 +40,12 @@ body > div {
   color: white;
 }
 .home{
-  background-color: azure;
+  background-color: #8d99ae;
+}
+#footer{
+  background-color:#e5e5e5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em 0;
 }
